--- a/landrys_psv_manager.Module.Win/landrys_psv_manager.Module.Win.csproj
+++ b/landrys_psv_manager.Module.Win/landrys_psv_manager.Module.Win.csproj
@@ -50,6 +50,7 @@
     <Reference Include="DevExpress.ExpressApp.AuditTrail.v19.2">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="DevExpress.ExpressApp.FileAttachment.Win.v19.2, Version=19.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.ExpressApp.Objects.v19.2">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -184,6 +185,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
     <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="WinModule.resx">
+      <DependentUpon>WinModule.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\ExpressAppLogo.png" />
